<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="activity_main_heading">Nanodegree Apps</string>

    <string name="launch">This button will launch my</string>

    <string name="app_spotify">Spotify Streamer</string>
    <string name="app_scores">Scores App</string>
    <string name="app_library">Library App</string>
    <string name="app_bigger">Build It Bigger</string>
    <string name="app_xyz">XYZ Reader</string>
    <string name="app_capstone">Capstone</string>
</resources>
