<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <include layout="@layout/toolbar"/>

        <TextView
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_heading"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_below="@+id/appbar"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/view_padding"
        android:layout_marginRight="@dimen/view_padding"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button_spotify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.Button"
            android:text="@string/app_spotify"/>

        <Button
            android:id="@+id/button_scores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.Button"
            android:text="@string/app_scores"/>

        <Button
            android:id="@+id/button_library"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.Button"
            android:text="@string/app_library"/>

        <Button
            android:id="@+id/button_bigger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.Button"
            android:text="@string/app_bigger"/>

        <Button
            android:id="@+id/button_xyz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.Button"
            android:text="@string/app_xyz"/>

        <Button
            android:id="@+id/button_capstone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.Button"
            android:text="@string/app_capstone"
            android:textColor="@color/button_background"
            android:backgroundTint="@color/button_text"/>

    </LinearLayout>

</RelativeLayout>